<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartActivity" >

    <TextView
        android:id="@+id/start_text_fixed_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/start_fixed_choice" />

    <Button
        android:id="@+id/start_button_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_text_fixed_choice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/start_button_host" />

    <Button
        android:id="@+id/start_button_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/start_button_host"
        android:layout_marginTop="20dp"
        android:text="@string/start_button_join" />

</RelativeLayout>